fixed spacing on exchanges title

--- a/src/assets/sass/local.scss
+++ b/src/assets/sass/local.scss
@@ -486,6 +486,10 @@
             margin-top: 4em;
         }
 
+        .cs-flex {
+            margin-top: -13em;
+        }
+
         .cs-title {
             max-width: 20ch;
             font-size: 2.5rem;
